fix overflow x for projects

--- a/static/css/introduction.css
+++ b/static/css/introduction.css
@@ -155,7 +155,7 @@ main .introduction {
     .careerOverview,
     .educationalBackground {
         width: 90%;      
-        font-size: 8px;      
+        font-size: 9px;      
     }
     .textDetails {
         height: auto;        
