--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -64,3 +64,32 @@ main .projects {
 .projectBox .projectName {
     align-self: center;
 }
+
+@media (max-width: 400px) {
+    .personalProjects {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: column;
+        justify-content: column;
+    }
+
+    .projectBoxes {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+    }
+
+    .projectBox {
+        width: 100%;
+        height: 100%;
+    }
+
+    .engineerProjects,
+    .visualizationProjects {
+        width: 100%;
+        height: 100%;
+    }
+}
